tests/mm0_mmu/fail/bad-sort432.mm0
-- bad modifier order
free provable strict sort s432;